compiler-core/src/parse/snapshots/gleam_core__parse__tests__reserved_macro.snap
---
source: compiler-core/src/parse/tests.rs
expression: const macro = 1
---
----- SOURCE CODE
const macro = 1

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:7
  │
1 │ const macro = 1
  │       ^^^^^ This is a reserved word

Hint: I was expecting to see a name here.
